# seal

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
include/: seal.hpp
include/seal/: seal.hpp
src/: CMakeLists.txt  global_state.hpp  helper.cpp  helper.hpp  math.cpp  seal.cpp  shape.cpp
src/shapes/: CMakeLists.txt  ellipse.cpp  ellipse.hpp
